worked on the routes and refining the queries

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,17 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: .5rem;
+}
+
+a {
+    font-size: 1em;
 }
 
 h1 {
     text-align: center;
+}
+
+div {
+    margin: 1rem;
 }
