--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tech Thought</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 <body>
 <header>
     <nav>
-<a href=""> Home</a>
+<a href="/"> Home</a>
 <a href=""> Dashboard</a>
 <a href="/login"> Login</a>
 <a href=""> logout</a>
     </nav>
     <div><h1>The Tech Thought</h1></div>
 </header>
-
+<hr>
+{{{body}}}
 
     {{#if logged_in}}
     <script src="./javascript/logout.js"></script>
