--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,10 +13,14 @@
 <body>
 <header>
     <nav>
+        {{#if logged_in}}
 <a href="/"> Home</a>
+<a href="/profile"> Dashboard</a>
+<a href="" id="logout"> Logout</a>
+{{else}}<a href="/"> Home</a>
 <a href=""> Dashboard</a>
 <a href="/login"> Login</a>
-<a href=""> logout</a>
+{{/if}}
     </nav>
     <div><h1>The Tech Thought</h1></div>
 </header>
