--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,16 @@
 {{#each posts as |post|}}
-<div class="row">
-    <div class="col-md-12">
-    <h2>{{post.title}}</h2>
-    <p>{{post.date_created}}</p>
-    <h3>{{user.name}} said..</h3>
-    <p>{{post.post_body}}</p>
+<div class="container.fluid p-2 bg-info m-5 rounded" id="shadow-box">
+    <div class="d-flex justify-content-between p-2">
+    <h2 class="display-6 bg-secondary rounded p-1">{{post.title}}</h2>
+    <time><em>{{post.date_created}}</em></time>
+    </div>
+    <h3 class="display-8 m-1">Posted by {{user.name}}:</h3>
+    <div class="m-2">
+    <p class="lead">{{post.post_body}}</p>
     </div>
 </div>
-<hr>
+<span class="border-bottom"></span>
 {{/each}}
+
+
+<script src="./javascript/homepage.js"></script>
