--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -29,7 +29,7 @@
         <textarea class="form-input" id="post-body" name="post-body"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-info">Create</button>
       </div>
     </form>
   </div>
