--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,16 +2,16 @@
   <div class="d-flex flex-column justify-content-center align-items-center col-md-6">
     <h2>Login</h2>
 
-    <form class="form login-form">
+    <form class="form login-form border rounded p-2 d-flex flex-column justify-content-center align-items-center flex-fill flex-grow m-1">
       <div class="form-group">
         <label for="email-login">email:</label>
-        <input class="form-input m-1" type="text" id="email-login" />
+        <input class="form-input m-1" type="text" id="email-login"/>
       </div>
       <div class="form-group">
         <label for="password-login">password:</label>
         <input class="form-input m-1" type="password" id="password-login" />
       </div>
-      <div class="form-group d-flex justify-content-center m-1">
+      <div class="form-group m-1">
         <button class="btn btn-info" type="submit">login</button>
       </div>
     </form>
@@ -19,7 +19,7 @@
   <div class="d-flex flex-column justify-content-center align-items-center col-md-6">
     <h2>Signup</h2>
 
-    <form class="form signup-form">
+    <form class="form signup-form border rounded p-2 d-flex flex-column justify-content-center align-items-center m-1">
       <div class="form-group">
         <label for="name-signup">name:</label>
         <input class="form-input m-1" type="text" id="name-signup" />
@@ -32,7 +32,7 @@
         <label for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
-      <div class="form-group d-flex justify-content-center m-1">
+      <div class="form-group m-1">
         <button class="btn btn-info" type="submit">signup</button>
       </div>
     </form>
