--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -22,8 +22,10 @@
     </form>
   </div>
 </div>
+{{!-- create comment loop --}}
+{{#each}}
 
-{{!-- needs comments to be generated --}}
-{{#if }}
+{{/each}}
 
-<script src="./javascript/comment.js"></script>
+<script src="../javascript/comment.js"></script>
+
