--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 {{#each posts as |post|}}
-<div class="container.fluid p-2 bg-info post-card rounded flex-wrap" id="shadow-box">
+<div class="container.fluid p-2 bg-info post-card rounded flex-wrap shadow-box">
     <div class="d-flex justify-content-between flex p-2 bg-secondary rounded">
     <h2 class="display-6 p-1 blog-post"><a href="/post/{{post.id}}" class="post-title text-black-50">{{post.title}}</a></h2>
     <time class=""><em>{{post.date_created}}</em></time>
