--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<header mb-2>
+<header>
     <nav class="nav navbar-light bg-light border-bottom">
         {{#if logged_in}}
 <a class="nav-link" href="/"> Home</a>
